set the webcam to shutdown after the recording has been stopped and added a UX tip text to the homepage

--- a/record.html
+++ b/record.html
@@ -16,6 +16,12 @@
         <button id="downloadBtn" disabled>Download Recording</button>
     </div>
 
+    <!--- adding a tip -->
+    <p style ="margin-top: 10px; font-size: 14px; color: #666">
+        Tip: For full session recording with a webcam overlay, please share your entire screen when starting recording.
+        If you only want to capture a specific browser tab without webcam overlays, selecting a single tab is fine.
+    </p>
+
     <!-- shows the screen share, webcam feed combined during recording -->
     <video id="preview" autoplay muted></video>
 
