not mobile compatible alert

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>tradingTape Home</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script>
+        if (/Mobi|Android|iPhone/i.test(navigator.userAgent)) {
+          alert("TradingTape works best on desktop — screen recording is not supported on mobile browsers.\n\nGet off the damn phone if you tryna really make money.\nWeak ass mf trader 💀📉");
+        }
+      </script>
+
 </head>
 <body>
 
