minor adjustments to titles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     }
   </style>
 
-  <!-- Mobile Roast  -->
+  <!-- Mobile Alert  -->
   <script>
     if (/Mobi|Android|iPhone/i.test(navigator.userAgent)) {
       alert("TradingTape works best on desktop — screen recording is not supported on mobile browsers.\n\nGet off the damn phone if you trying to really make money.\nWeak ass mf trader 💀📉");
@@ -85,11 +85,9 @@
   <h1>TradingTape 🎥</h1>
   <p class="tagline">Record. Reflect. Replay. Trade like an athlete.</p>
 
-  <!-- Shaq Image -->
   <img src="/images/shaqcamcorder.jpg" alt="Shaq Holding Camcorder" class="screenshot">
   <p class="caption">Shaq on tape duty. You're next. 🎥</p>
 
-  <!-- 🎬 Buttons -->
   <div class="home-buttons">
     <a href="record.html"><button>🎬 Start New Recording</button></a>
     <a href="replay.html"><button>📂 View Past Sessions</button></a>
