--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <a href="replay.html"><button>📂 View Past Sessions</button></a>
   </div>
 
-  <footer>Built by a real one. © 2025</footer>
+  <footer>Built by David Godinez. © 2025</footer>
 
 </body>
 </html>
